--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
-body{
-  background: black;
+.red{
+  background: red;
+  min-height: 50px;
+}
+
+.blue{
+  background: blue;
+  min-height: 50px;
+}
+
+.myTexts{
+  max-width: 400px;
+  border: 2px solid blue;
+  margin: 20px auto;
 }
